syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    SpdrClientFirmRiskMgmt records are created/published by SpiderRock Execution Engines and show exchange level risk management child order rejects.
*/    
message SpdrClientFirmRiskMgmt {
    message PKey {
        
        string client_firm = 10;
        TickerKey ticker = 11; // will be empty if riskMgmtLevel = ClientFirm
        string order_ex_dest = 14;
        RiskMgmtLevel risk_mgmt_level = 13;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 num_rejects = 100;
    string accnt = 103; // most recently rejected accnt
    OptionKey sec_key = 106; // most recently rejected secKey
    SpdrKeyType sec_type = 109;
    SpdrSource spdr_source = 112;
    string user_name = 115;
    string reject_text = 118; // most recent rejectText
    google.protobuf.Timestamp timestamp = 121;
}


